2012-12-10 Miguel de Dios <miguel.dedios@artica.es>
	
	* db/mysql.php: finish to fixed the insert in the metaconsoles.

2012-12-10  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added
	tags column to the network components table

2012-12-09  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: Replaced ^---.. comments with "-- -.." to avoid problems
	with MySQL 5.0.x
	
	* include/config_process.php: Fixed some problems with default timezone, because
	config function was called before timezone was setup.
	
	* include/styles/pandora.css: Added new style for netflow report render (HTML).
	
	* include/functions_netflow.php: Replaced some code for use new CSS styles.
	
	Ported new feature (Command Snapshot) from 4.0.3 code.

        *  include/javascript/pandora.js: Added new javascript function
        to open a generic URL with custom width / height.

        * operation/agentes/snapshot_view.php: New feature for command
        snapshot rendering.

        * operation/agentes/datos_agente.php,
        operation/agentes/estado_monitores.php: Changes for new feature
        command snapshot monitoring.


2012-12-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_categories.php: Add categories
	  library of functions

2012-12-07  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js
	godmode/agentes/module_manager_editor_common.php
	godmode/agentes/configurar_agente.php
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_common.php
	godmode/modules/manage_network_components.php: Added id_category
	to network components and module editors

2012-12-07  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php: More aesthetic fixes to netflow
	  charts.
