@@ -1745,22 +1745,27 @@ CREATE TABLE tevent_filter (
 	filter_only_alert NUMBER(10, 0) default -1 NOT NULL
 );
 
+CREATE SEQUENCE tevent_filter_s INCREMENT BY 1 START WITH 1;
+CREATE OR REPLACE TRIGGER tevent_filter_inc BEFORE INSERT ON tevent_filter REFERENCING NEW AS NEW FOR EACH ROW BEGIN SELECT tevent_filter_s.nextval INTO :NEW.ID_FILTER FROM dual; END tevent_filter_inc;;
+
 -- ---------------------------------------------------------------------
 -- Table `tpassword_history`
 -- ---------------------------------------------------------------------
-CREATE TABLE IF NOT EXISTS tpassword_history (
+CREATE TABLE tpassword_history (
 	id_pass  NUMBER(10) NOT NULL PRIMARY KEY,
 	id_user varchar2(60) NOT NULL,
 	password varchar2(45) default '',
 	date_begin TIMESTAMP DEFAULT 0,
 	date_end TIMESTAMP DEFAULT 0
 );
+
 CREATE SEQUENCE tpassword_history_s INCREMENT BY 1 START WITH 1;
+CREATE OR REPLACE TRIGGER tpassword_history_inc BEFORE INSERT ON tpassword_history REFERENCING NEW AS NEW FOR EACH ROW BEGIN SELECT tpassword_history_s.nextval INTO :NEW.ID_PASS FROM dual; END tpassword_history_inc;;
 
 -- ---------------------------------------------------------------------
 -- Table `tevent_response`
 -- ---------------------------------------------------------------------
-CREATE TABLE IF NOT EXISTS tevent_response (
+CREATE TABLE tevent_response (
 	id  NUMBER(10) NOT NULL PRIMARY KEY,
 	name varchar2(600) NOT NULL default '',
 	description CLOB,
@@ -1772,7 +1777,9 @@ CREATE TABLE IF NOT EXISTS tevent_response (
 	new_window NUMBER(10, 0) NOT NULL DEFAULT 0,
 	params CLOB
 );
+
 CREATE SEQUENCE tevent_response_s INCREMENT BY 1 START WITH 1;
+CREATE OR REPLACE TRIGGER tevent_response_inc BEFORE INSERT ON tevent_response REFERENCING NEW AS NEW FOR EACH ROW BEGIN SELECT tevent_response_s.nextval INTO :NEW.ID FROM dual; END tevent_response_inc;;
 
 -- ---------------------------------------------------------------------
 -- Table "tcategory"
@@ -1781,3 +1788,60 @@ CREATE TABLE tcategory (
 	id NUMBER(10, 0) NOT NULL PRIMARY KEY, 
 	name VARCHAR2(600) default '' NOT NULL
 ); 
+
+-- ---------------------------------------------------------------------
+-- Table `tupdate_settings`
+-- ---------------------------------------------------------------------
+CREATE TABLE tupdate_settings ( 
+	key VARCHAR2(255) default '' PRIMARY KEY, 
+	value VARCHAR2(255) default ''
+);
+
+-- ---------------------------------------------------------------------
+-- Table `tupdate_package`
+-- ---------------------------------------------------------------------
+CREATE TABLE tupdate_package( 
+	id NUMBER(10, 0) NOT NULL PRIMARY KEY, 
+	timestamp  TIMESTAMP default NULL, 
+	description VARCHAR2(255) default ''
+);
+
+CREATE SEQUENCE tupdate_package_s INCREMENT BY 1 START WITH 1;
+CREATE OR REPLACE TRIGGER tupdate_package_inc BEFORE INSERT ON tupdate_package REFERENCING NEW AS NEW FOR EACH ROW BEGIN SELECT tupdate_package_s.nextval INTO :NEW.ID FROM dual; END tupdate_package_inc;;
+
+-- ---------------------------------------------------------------------
+-- Table `tupdate`
+-- ---------------------------------------------------------------------
+CREATE TABLE tupdate ( 
+	id NUMBER(10, 0) NOT NULL PRIMARY KEY, 
+	type VARCHAR2(15), 
+	id_update_package NUMBER(10, 0) default 0 REFERENCES tupdate_package(id) ON DELETE CASCADE, 
+	filename VARCHAR2(250) default '', 
+	checksum VARCHAR2(250) default '', 
+	previous_checksum VARCHAR2(250) default '', 
+	svn_version NUMBER(10, 0) default 0, 
+	data CLOB default '', 
+	data_rollback CLOB default '', 
+	description CLOB default '', 
+	db_table_name VARCHAR2(140) default '', 
+	db_field_name VARCHAR2(140) default '', 
+	db_field_value VARCHAR2(1024) default '', 
+	CONSTRAINT tupdate_type_cons CHECK (type IN ('code', 'db_data', 'db_schema', 'binary'))
+);
+
+CREATE SEQUENCE tupdate_s INCREMENT BY 1 START WITH 1;
+CREATE OR REPLACE TRIGGER tupdate_inc BEFORE INSERT ON tupdate REFERENCING NEW AS NEW FOR EACH ROW BEGIN SELECT tupdate_s.nextval INTO :NEW.ID FROM dual; END;;
+CREATE OR REPLACE TRIGGER tupdate_update AFTER UPDATE OF ID ON tupdate_package FOR EACH ROW BEGIN UPDATE tupdate SET ID_UPDATE_PACKAGE = :NEW.ID WHERE ID_UPDATE_PACKAGE = :OLD.ID; END;;
+
+-- ---------------------------------------------------------------------
+-- Table `tupdate_journal`
+-- ---------------------------------------------------------------------
+CREATE TABLE tupdate_journal ( 
+	id NUMBER(10, 0) NOT NULL PRIMARY KEY, 
+	id_update NUMBER(10, 0) default 0 REFERENCES tupdate(id) ON DELETE CASCADE
+);
+
+CREATE SEQUENCE tupdate_journal_s INCREMENT BY 1 START WITH 1;
+CREATE OR REPLACE TRIGGER tupdate_journal_inc BEFORE INSERT ON tupdate_journal REFERENCING NEW AS NEW FOR EACH ROW BEGIN SELECT tupdate_journal_s.nextval INTO :NEW.ID FROM dual; END;;
+CREATE OR REPLACE TRIGGER tupdate_journal_update AFTER UPDATE OF ID ON tupdate FOR EACH ROW BEGIN UPDATE tupdate_journal SET ID = :NEW.ID WHERE ID = :OLD.ID; END;;
+
