@@ -1,3 +1,13 @@
+2012-12-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* pandoradb_data.sql
+	 pandoradb.sql
+	 pandoradb.postgreSQL.sql
+	 pandoradb.oracle.sql
+	 extensions/update_manager.php
+	 pandoradb.data.postgreSQL.sql
+	 pandoradb.data.oracle.sql: Added table tupdate_settings;
+	 
 2012-12-10 Miguel de Dios <miguel.dedios@artica.es>
 	
 	* db/mysql.php: finish to fixed the insert in the metaconsoles.
